--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <h2 class="section-title">Skills & Study</h2>
         <div class="skills-grid">
           <div class="skill-category">
-            <h3>Frontend</h3>
+            <h3>My Skills</h3>
             <div class="skill-items">
               <span class="skill-item">HTML</span>
               <span class="skill-item">CSS</span>
