--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Firdan - Portfolio</title>
-    <meta
-      name="description"
-      content="Firdan's professional portfolio showcasing web development skills and projects"
-    />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -71,13 +67,13 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
           <div class="about-image">
-            <img
-              src="assets/img/logo_profil.jpg"
-              alt="Firdan Profile Photo"
-              class="profile-photo"
-              style="max-width: 250px; height: 250px"
-            />
-            
+        <img
+          src="assets/img/Firdan_3.jpg"
+          alt="Firdan Profile Photo"
+          class="profile-photo"
+          id="profile-photo" /> <!-- Added ID for interaction -->
+        </img>
+
             <!-- Special Section for Favorite Person -->
             <div class="favorite-person-section">
               <img
@@ -115,7 +111,7 @@
                 <p>Years Experience</p>
               </div>
               <div class="stat">
-                <h3>0+</h3>
+                <h3>3+</h3>
                 <p>Happy Clients</p>
               </div>
             </div>
@@ -130,13 +126,14 @@
         <h2 class="section-title">Skills & Study</h2>
         <div class="skills-grid">
           <div class="skill-category">
-            <h3>Frontend</h3>
+            <h3>My Skills</h3>
             <div class="skill-items">
               <span class="skill-item">HTML</span>
               <span class="skill-item">CSS</span>
               <span class="skill-item">JavaScript</span>
               <span class="skill-item">PHP</span>
               <span class="skill-item">Python</span>
+              <span class="skill-item">Unity</span>
             </div>
           </div>
           <div class="skill-category">
